@@ -1,3 +1,7 @@
+2007-05-10: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/PublicKey.pm: simplify error handling in fetch()
+ * lib/Mail/DKIM/Policy.pm: simplify error handling in fetch()
+
  -- VERSION 0.25 --
 
 2007-05-10: Jason Long <jlong@messiah.edu>
